--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 pygtrie
 numpy
 ubelt
-pytorch
 xdoctest
 sortedcontainers
 tqdm
 h5py
 bayesian-optimization
+# pytorch # comment out, ideally we will build this from source ourselves
