--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,8 @@ tqdm
 h5py
 bayesian-optimization
 torchvision
+pandas
+opencv_python
+scikit-image
+tensorboard_logger
 # pytorch # comment out, ideally we will build this from source ourselves
