--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,8 @@ h5py
 bayesian-optimization
 torchvision
 pandas
-opencv_python
 scikit-image
 tensorboard_logger
-# pytorch # comment out, ideally we will build this from source ourselves
+parse
+# opencv_python # CAREFUL, dont clobber ones that we installed
+# pytorch # causing docker issues, comment out, ideally we will build this from source ourselves
