--- a/requirements.txt
+++ b/requirements.txt
@@ -13,12 +13,12 @@ tensorboard_logger
 parse
 sympy
 Pillow
-onnx
 matplotlib
 pydensecrf
 scipy
 six
 line_profiler
+# onnx
 # tensorboard
 # opencv_python # CAREFUL, dont clobber ones that we installed
 # pytorch # causing docker issues, comment out, ideally we will build this from source ourselves
